[tool.poetry]
name = "miem-llm-model"
version = "0.1.0"
description = ""
authors = ["Darina Rustamova <ddrustamova@miem.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
pandas = "^2.1.4"
datasets = "^2.15.0"
transformers = "^4.36.1"
sentencepiece = "^0.1.99"
torch = "^2.1.2"
ipykernel = "^6.27.1"
peft = "^0.7.1"
wandb = "^0.16.1"
pre-commit = "^3.6.0"
accelerate = "^0.25.0"
bitsandbytes = "^0.41.3.post2"
scipy = "^1.11.4"
label-studio = "^1.10.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
